--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/dark.css">
+  <!--<link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/dark.css">-->
+  <link 
+    rel="stylesheet"
+    href="darklight.min.css"
+    title="docsify-darklight-theme"
+    type="text/css"
+  />
   <style type="text/css">
-    body {
-      background: #282828;
-    }
     .loading {
       position: absolute;
       top: 0; bottom: 0; left: 0; right: 0;
@@ -30,12 +33,22 @@
       name: 'Slipways Modding Documentation',
       repo: 'https://github.com/slipways-game/docs',
       homepage: 'home.md',
-      subMaxLevel: 2,
+      subMaxLevel: 3,
       loadSidebar: true,
-      auto2top: true
+      auto2top: true,
+      darklightTheme: {
+        dark: {
+          highlightColor: '#ffeeaa',
+          codeTypeColor: '#555555'
+        }
+      }
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-python.min.js"></script>
+  <script 
+    src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/index.min.js"
+    type="text/javascript">
+  </script>
 </body>
 </html>
