Adjusting the theme to make bold visible in both light and dark modes.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
       darklightTheme: {
         dark: {
           highlightColor: '#ffeeaa',
-          codeTypeColor: '#555555'
+          codeTypeColor: '#555555',
+          boldColor: '#eeeeee'
+        },
+        light: {
+          boldColor: '#411'
         }
       }
     }
