Information about techs and perks in the spreadsheets chapter.

--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
         dark: {
           highlightColor: '#ffeeaa',
           codeTypeColor: '#555555',
-          boldColor: '#eeeeee'
+          boldColor: '#eeeeee',
+          defBoxColor: '#000000',
         },
         light: {
-          boldColor: '#411'
+          boldColor: '#411',
+          defBoxColor: '#ffeec0',
         }
       }
     }
